"""
Übung 2 - Textformatierung

In dieser Übung verwendet der Interpreter Zeichen, um Textformate zu erkennen und anzuwenden.
Es sollte Zeichen wie '#' zum Fettdrucken und '_' zum Kursivdrucken interpretieren.

Implementieren Sie die Klassen 'Interpreter', 'BoldExpression', 'ItalicExpression' und 'TextExpression'.
"""


class Interpreter:
    pass


class BoldExpression:
    pass


class ItalicExpression:
    pass


class TextExpression:
    pass


if __name__ == "__main__":
    interpreter = Interpreter()
    print(interpreter.interpret("#Hello World"))  # Output: <b>Hello World</b>